--- a/18.html
+++ b/18.html
@@ -1050,7 +1050,23 @@
         </div>
 
         <footer>
-            <p><a href="https://www.linkedin.com/in/bryankhamly/" target="_blank">Bryan Khamly - LinkedIn</a></p>
+            <style>
+a {
+  color: #66b3ff; /* light blue */
+  text-decoration: none;
+}
+
+a:visited {
+  color: #66b3ff; /* same color even after visited */
+}
+</style>
+
+<p>
+  <a href="https://www.linkedin.com/in/bryankhamly/" target="_blank">
+    Bryan Khamly - LinkedIn
+  </a>
+</p>
+
             <p style="margin-top: 10px; opacity: 0.8;">Bio 15 - Chapter 18: Applied Immunology</p>
         </footer>
     </div>
