--- a/18.html
+++ b/18.html
@@ -469,7 +469,7 @@
             <button onclick="showSection('types')">📋 Vaccine Types</button>
             <button onclick="showSection('monoclonal')">🔬 Monoclonal Antibodies</button>
             <button onclick="showSection('elisa')">🧪 ELISA</button>
-            <button onclick="showSection('outline')">📝 Study Outline</button>
+            <button onclick="showSection('outline')">📝 Study Outline Answers</button>
             <button onclick="showSection('practice')">🎯 Practice Test</button>
         </nav>
 
@@ -1004,7 +1004,7 @@
                 
                 <div id="testIntro" style="text-align: center; padding: 40px;">
                     <h3 style="color: #667eea; margin-bottom: 20px;">Test Your Knowledge!</h3>
-                    <p style="font-size: 1.2em; margin-bottom: 30px;">This practice test contains 20 randomly selected questions from a pool of 100+ questions covering all chapter content.</p>
+                    <p style="font-size: 1.2em; margin-bottom: 30px;">This practice test contains 20 randomly selected questions from a pool of 100+ questions. You may retry at the end to get another randomly generated test.</p>
                     <button onclick="startTest()" style="padding: 15px 40px; font-size: 1.2em; background: #667eea; color: white; border: none; border-radius: 30px; cursor: pointer; transition: all 0.3s;">
                         Start Practice Test
                     </button>
