--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
     <div class="container">
         <header>
             <h1>Microbiology Study Guides</h1>
+            <p>Please use this as a bonus to your studying.</p>
         </header>
 
         <div class="chapter-grid">
