--- a/index.html
+++ b/index.html
@@ -117,6 +117,132 @@
                 <span class="chapter-card-badge">STIs: Gonorrhea, Syphilis, HPV, Herpes</span>
             </a>
         </div>
+
+        <!-- Lab Section Divider -->
+        <div class="section-divider">
+            <span class="section-divider-text">Laboratory Exercises</span>
+        </div>
+
+        <h2 class="section-title">Lab Study Guides</h2>
+        <p class="text-center mb-4" style="color: var(--text-secondary); max-width: 700px; margin-left: auto; margin-right: auto;">
+            Review core concepts and techniques from laboratory exercises. These guides cover isolation, identification, and biochemical testing procedures.
+        </p>
+
+        <div class="chapter-grid">
+            <!-- Exercise 13 - Capsular Staining -->
+            <a href="labs/ex13.html" class="chapter-card lab">
+                <div class="chapter-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="12" cy="12" r="8"/>
+                        <circle cx="12" cy="12" r="4"/>
+                        <circle cx="12" cy="12" r="10" stroke-dasharray="2,2"/>
+                    </svg>
+                </div>
+                <h3>Exercise 13</h3>
+                <p>Capsular Staining: Anthony Method</p>
+                <span class="chapter-card-badge">Capsules, Glycocalyx, Virulence</span>
+            </a>
+
+            <!-- Exercise 15 - Endospore Staining -->
+            <a href="labs/ex15.html" class="chapter-card lab">
+                <div class="chapter-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <ellipse cx="12" cy="12" rx="8" ry="4"/>
+                        <circle cx="12" cy="12" r="2"/>
+                    </svg>
+                </div>
+                <h3>Exercise 15</h3>
+                <p>Endospore Staining: Schaeffer-Fulton</p>
+                <span class="chapter-card-badge">Bacillus, Clostridium, Spore Resistance</span>
+            </a>
+
+            <!-- Exercise 16 - Acid-Fast Staining -->
+            <a href="labs/ex16.html" class="chapter-card lab">
+                <div class="chapter-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="3" width="18" height="14" rx="2"/>
+                        <path d="M3 9h18"/>
+                        <circle cx="8" cy="14" r="2"/>
+                        <circle cx="16" cy="14" r="2"/>
+                    </svg>
+                </div>
+                <h3>Exercise 16</h3>
+                <p>Acid-Fast Staining: Kinyoun Method</p>
+                <span class="chapter-card-badge">Mycobacteria, TB, Mycolic Acid</span>
+            </a>
+
+            <!-- Exercise 43 - Bacterial Counts of Foods -->
+            <a href="labs/ex43.html" class="chapter-card lab">
+                <div class="chapter-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 2C8 2 4 5 4 9c0 3 2 5 3 6l-1 5h12l-1-5c1-1 3-3 3-6 0-4-4-7-8-7z"/>
+                        <path d="M9 22h6"/>
+                    </svg>
+                </div>
+                <h3>Exercise 43</h3>
+                <p>Bacterial Counts of Foods</p>
+                <span class="chapter-card-badge">Food Safety, Plate Counts, Coliforms</span>
+            </a>
+
+            <!-- Exercise 54 - Streptococci & Enterococci -->
+            <a href="labs/ex54.html" class="chapter-card lab">
+                <div class="chapter-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="8" cy="8" r="3"/>
+                        <circle cx="16" cy="8" r="3"/>
+                        <circle cx="8" cy="16" r="3"/>
+                        <circle cx="16" cy="16" r="3"/>
+                        <path d="M11 8h2M8 11v2M16 11v2M11 16h2"/>
+                    </svg>
+                </div>
+                <h3>Exercise 54</h3>
+                <p>Streptococci & Enterococci: Isolation and Identification</p>
+                <span class="chapter-card-badge">Hemolysis, Lancefield Groups, CAMP Test</span>
+            </a>
+
+            <!-- Exercise 56 - Synthetic Epidemic -->
+            <a href="labs/ex56.html" class="chapter-card lab">
+                <div class="chapter-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <circle cx="12" cy="12" r="10"/>
+                        <path d="M2 12h20"/>
+                        <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
+                    </svg>
+                </div>
+                <h3>Exercise 56</h3>
+                <p>A Synthetic Epidemic: Epidemiology Simulation</p>
+                <span class="chapter-card-badge">Epidemics, Herd Immunity, Disease Spread</span>
+            </a>
+
+            <!-- Exercise 60 - ELISA -->
+            <a href="labs/ex60.html" class="chapter-card lab">
+                <div class="chapter-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="3" width="18" height="18" rx="2"/>
+                        <circle cx="8.5" cy="8.5" r="1.5"/>
+                        <circle cx="15.5" cy="8.5" r="1.5"/>
+                        <circle cx="8.5" cy="15.5" r="1.5"/>
+                        <circle cx="15.5" cy="15.5" r="1.5"/>
+                    </svg>
+                </div>
+                <h3>Exercise 60</h3>
+                <p>Enzyme-Linked Immunosorbent Assay (ELISA)</p>
+                <span class="chapter-card-badge">Immunoassays, HIV Detection, Antibodies</span>
+            </a>
+
+            <!-- Exercise 61 - Blood Grouping -->
+            <a href="labs/ex61.html" class="chapter-card lab">
+                <div class="chapter-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 2c-4 0-7 3-7 7 0 5 7 13 7 13s7-8 7-13c0-4-3-7-7-7z"/>
+                        <circle cx="12" cy="9" r="2.5"/>
+                    </svg>
+                </div>
+                <h3>Exercise 61</h3>
+                <p>Blood Grouping: ABO and Rh Typing</p>
+                <span class="chapter-card-badge">ABO System, Rh Factor, Agglutination</span>
+            </a>
+        </div>
     </main>
 
     <!-- Footer -->
