--- a/index.html
+++ b/index.html
@@ -127,6 +127,9 @@
         <p class="text-center mb-4" style="color: var(--text-secondary); max-width: 700px; margin-left: auto; margin-right: auto;">
             Review core concepts and techniques from laboratory exercises. These guides cover isolation, identification, and biochemical testing procedures.
         </p>
+        <p class="text-center mb-4" style="color: var(--warning); max-width: 700px; margin-left: auto; margin-right: auto; font-size: 0.9rem; font-style: italic;">
+            Note: Material is based off full lab journal content, will condense to core concepts later.
+        </p>
 
         <div class="chapter-grid">
             <!-- Exercise 13 - Capsular Staining -->
