Blood Typing Game

--- a/index.html
+++ b/index.html
@@ -246,6 +246,31 @@
                 <span class="chapter-card-badge">ABO System, Rh Factor, Agglutination</span>
             </a>
         </div>
+
+        <!-- Interactive Games Section -->
+        <div class="section-divider">
+            <span class="section-divider-text">Interactive Practice</span>
+        </div>
+
+        <h2 class="section-title">Practice Games</h2>
+        <p class="text-center mb-4" style="color: var(--text-secondary); max-width: 700px; margin-left: auto; margin-right: auto;">
+            Test your knowledge with interactive games and simulations.
+        </p>
+
+        <div class="chapter-grid">
+            <!-- Blood Typing Game -->
+            <a href="games/blood-typing.html" class="chapter-card game">
+                <div class="chapter-card-icon">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M12 2c-4 0-7 3-7 7 0 5 7 13 7 13s7-8 7-13c0-4-3-7-7-7z"/>
+                        <path d="M12 6v6M9 9h6"/>
+                    </svg>
+                </div>
+                <h3>Blood Typing Game</h3>
+                <p>Practice identifying blood types from agglutination patterns</p>
+                <span class="chapter-card-badge">ABO, Rh Factor, Agglutination</span>
+            </a>
+        </div>
     </main>
 
     <!-- Footer -->
