--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <li><a href="chapters/chapter24.html">Ch 24: Respiratory</a></li>
                 <li><a href="chapters/chapter25.html">Ch 25: Digestive</a></li>
                 <li><a href="chapters/chapter26.html">Ch 26: Urinary/Repro</a></li>
+                <li><a href="todo.html" class="nav-todo">Site Status</a></li>
                 <li><a href="practice.html" class="nav-highlight">Practice Test</a></li>
             </ul>
         </div>
