--- a/index.html
+++ b/index.html
@@ -121,15 +121,12 @@
 
         <!-- Lab Section Divider -->
         <div class="section-divider">
-            <span class="section-divider-text">Laboratory Exercises</span>
+            <span class="section-divider-text">Lab Exercises</span>
         </div>
 
         <h2 class="section-title">Lab Study Guides</h2>
         <p class="text-center mb-4" style="color: var(--text-secondary); max-width: 700px; margin-left: auto; margin-right: auto;">
-            Review core concepts and techniques from laboratory exercises. These guides cover isolation, identification, and biochemical testing procedures.
-        </p>
-        <p class="text-center mb-4" style="color: var(--success); max-width: 700px; margin-left: auto; margin-right: auto; font-size: 0.9rem; font-style: italic;">
-            Condensed to core test concepts and expected results.
+            All content here is from the lab manual with the core concepts and results condensed.
         </p>
 
         <div class="chapter-grid">
