--- a/todo.html
+++ b/todo.html
@@ -195,6 +195,15 @@
         <h3 class="section-label">Completed</h3>
         <ul class="todo-list">
             <li class="todo-item completed">
+                <span class="todo-text">Test results review added to practice test</span>
+                <span class="todo-status completed">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="20 6 9 17 4 12"/>
+                    </svg>
+                    Done
+                </span>
+            </li>
+            <li class="todo-item completed">
                 <span class="todo-text">Blood typing activities</span>
                 <span class="todo-status completed">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
