--- a/practice.html
+++ b/practice.html
@@ -314,12 +314,12 @@
         /* Results */
         .results-container {
             display: none;
-            max-width: 600px;
+            max-width: 900px;
             margin: 0 auto;
-            text-align: center;
         }
 
         .results-card {
+            text-align: center;
             background: var(--surface);
             border-radius: var(--radius);
             padding: 3rem 2rem;
@@ -413,6 +413,134 @@
         .test-again-btn:hover {
             transform: translateY(-2px);
             box-shadow: 0 4px 15px rgba(6, 182, 212, 0.4);
+        }
+
+        /* Answer Review Styles */
+        .review-inline {
+            margin-top: 2rem;
+            max-width: 900px;
+        }
+
+        .review-inline-title {
+            text-align: center;
+            color: var(--text-primary);
+            margin-bottom: 1.5rem;
+            font-size: 1.5rem;
+        }
+
+        .review-question {
+            background: var(--surface);
+            border-radius: var(--radius);
+            padding: 1.5rem;
+            margin-bottom: 1rem;
+            border: 1px solid var(--border);
+            border-left: 4px solid var(--border);
+        }
+
+        .review-question.correct {
+            border-left-color: #10b981;
+        }
+
+        .review-question.incorrect {
+            border-left-color: #ef4444;
+        }
+
+        .review-question-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: flex-start;
+            margin-bottom: 1rem;
+            gap: 1rem;
+        }
+
+        .review-question-number {
+            font-size: 0.85rem;
+            color: var(--text-secondary);
+        }
+
+        .review-question-chapter {
+            font-size: 0.75rem;
+            padding: 0.25rem 0.75rem;
+            background: rgba(139, 92, 246, 0.1);
+            color: var(--primary);
+            border-radius: 999px;
+            white-space: nowrap;
+        }
+
+        .review-question-text {
+            font-size: 1.05rem;
+            color: var(--text-primary);
+            margin-bottom: 1rem;
+            line-height: 1.5;
+        }
+
+        .review-answer {
+            display: flex;
+            align-items: flex-start;
+            gap: 0.75rem;
+            padding: 0.75rem 1rem;
+            border-radius: var(--radius-sm);
+            margin-bottom: 0.5rem;
+            font-size: 0.95rem;
+        }
+
+        .review-answer-icon {
+            flex-shrink: 0;
+            width: 20px;
+            height: 20px;
+        }
+
+        .review-answer.user-correct {
+            background: rgba(16, 185, 129, 0.1);
+            color: #10b981;
+        }
+
+        .review-answer.user-incorrect {
+            background: rgba(239, 68, 68, 0.1);
+            color: #ef4444;
+        }
+
+        .review-answer.correct-answer {
+            background: rgba(16, 185, 129, 0.1);
+            color: #10b981;
+        }
+
+        .review-answer-label {
+            font-weight: 600;
+            min-width: 100px;
+        }
+
+        .review-answer-text {
+            color: var(--text-primary);
+        }
+
+        .review-filter-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 0.5rem;
+            margin-bottom: 1.5rem;
+        }
+
+        .filter-btn {
+            padding: 0.5rem 1rem;
+            font-size: 0.9rem;
+            border: 1px solid var(--border);
+            border-radius: var(--radius-sm);
+            background: var(--surface);
+            color: var(--text-secondary);
+            cursor: pointer;
+            transition: var(--transition);
+        }
+
+        .filter-btn:hover {
+            border-color: var(--primary);
+            color: var(--primary);
+        }
+
+        .filter-btn.active {
+            background: var(--primary);
+            border-color: var(--primary);
+            color: white;
         }
 
         .available-questions {
@@ -580,6 +708,21 @@
                 </div>
 
                 <button class="test-again-btn" id="test-again-btn">Test Again</button>
+            </div>
+
+            <!-- Answer Review (inline below results) -->
+            <div class="review-inline" id="review-inline">
+                <h3 class="review-inline-title">Answer Review</h3>
+
+                <div class="review-filter-buttons">
+                    <button class="filter-btn active" data-filter="all">All</button>
+                    <button class="filter-btn" data-filter="incorrect">Incorrect Only</button>
+                    <button class="filter-btn" data-filter="correct">Correct Only</button>
+                </div>
+
+                <div id="review-questions">
+                    <!-- Questions will be inserted here -->
+                </div>
             </div>
         </div>
     </main>
