--- a/todo.html
+++ b/todo.html
@@ -159,7 +159,7 @@
         <h3 class="section-label">In Progress</h3>
         <ul class="todo-list">
             <li class="todo-item in-progress">
-                <span class="todo-text">Nothing</span>
+                <span class="todo-text">Final Review</span>
                 <span class="todo-status in-progress">
                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="10"/>
@@ -172,28 +172,28 @@
 
         <h3 class="section-label">Planned</h3>
         <ul class="todo-list">
-            <li class="todo-item planned">
-                <span class="todo-text">Adding content for rest of lab exercises + metabolic tests for Thursday Lab Exam</span>
-                <span class="todo-status planned">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M12 5v14M5 12h14"/>
-                    </svg>
-                    Planned
-                </span>
-            </li>
-                        <li class="todo-item planned">
-                <span class="todo-text">Refine lab exercises with images since its mainly text</span>
-                <span class="todo-status planned">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M12 5v14M5 12h14"/>
-                    </svg>
-                    Planned
-                </span>
-            </li>
         </ul>
 
         <h3 class="section-label">Completed</h3>
         <ul class="todo-list">
+            <li class="todo-item completed">
+                <span class="todo-text">Adding content for rest of lab exercises + metabolic tests for Thursday Lab Exam</span>
+                <span class="todo-status completed">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="20 6 9 17 4 12"/>
+                    </svg>
+                    Done
+                </span>
+            </li>
+            <li class="todo-item completed">
+                <span class="todo-text">Refine lab exercises with images since its mainly text</span>
+                <span class="todo-status completed">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <polyline points="20 6 9 17 4 12"/>
+                    </svg>
+                    Done
+                </span>
+            </li>
             <li class="todo-item completed">
                 <span class="todo-text">Test results review added to practice test</span>
                 <span class="todo-status completed">
