--- a/games/blood-typing.html
+++ b/games/blood-typing.html
@@ -849,7 +849,13 @@
                 </svg>
             </button>
             <ul class="navbar-nav">
-                <li><a href="../labs/ex61.html">Blood Grouping Lab</a></li>
+                <li><a href="../chapters/chapter21.html">Ch 21: Skin</a></li>
+                <li><a href="../chapters/chapter22.html">Ch 22: Nervous</a></li>
+                <li><a href="../chapters/chapter24.html">Ch 24: Respiratory</a></li>
+                <li><a href="../chapters/chapter25.html">Ch 25: Digestive</a></li>
+                <li><a href="../chapters/chapter26.html">Ch 26: Urinary/Repro</a></li>
+                <li><a href="../labs/lab-exam-2-review.html" class="nav-lab">Lab Exam 2</a></li>
+                <li><a href="../todo.html" class="nav-todo">Site Status</a></li>
                 <li><a href="../practice.html" class="nav-highlight">Practice Test</a></li>
             </ul>
         </div>
