--- a/labs/ex43.html
+++ b/labs/ex43.html
@@ -33,6 +33,8 @@
                 <li><a href="../chapters/chapter24.html">Ch 24: Respiratory</a></li>
                 <li><a href="../chapters/chapter25.html">Ch 25: Digestive</a></li>
                 <li><a href="../chapters/chapter26.html">Ch 26: Urinary/Repro</a></li>
+                <li><a href="lab-exam-2-review.html" class="nav-lab">Lab Exam 2</a></li>
+                <li><a href="../todo.html" class="nav-todo">Site Status</a></li>
                 <li><a href="../practice.html" class="nav-highlight">Practice Test</a></li>
             </ul>
         </div>
@@ -140,6 +142,14 @@
                 <li><em>E. coli</em> O157:H7 from undercooked beef is serious</li>
                 <li><strong>Pasteurization</strong> kills many bacteria but NOT all (milk still spoils)</li>
             </ul>
+        </div>
+
+        <div class="image-gallery mt-4">
+            <h4>Image Gallery</h4>
+            <div class="gallery-placeholder">
+                <div class="gallery-item"><img src="../images/bacteria counting.png" alt="Bacterial Plate Count"></div>
+                <div class="gallery-item"><img src="../images/bacterial count 2.jpg" alt="Bacterial Count Example"></div>
+            </div>
         </div>
     </main>
 
