--- a/labs/ex56.html
+++ b/labs/ex56.html
@@ -33,6 +33,8 @@
                 <li><a href="../chapters/chapter24.html">Ch 24: Respiratory</a></li>
                 <li><a href="../chapters/chapter25.html">Ch 25: Digestive</a></li>
                 <li><a href="../chapters/chapter26.html">Ch 26: Urinary/Repro</a></li>
+                <li><a href="lab-exam-2-review.html" class="nav-lab">Lab Exam 2</a></li>
+                <li><a href="../todo.html" class="nav-todo">Site Status</a></li>
                 <li><a href="../practice.html" class="nav-highlight">Practice Test</a></li>
             </ul>
         </div>
