--- a/practice.html
+++ b/practice.html
@@ -592,6 +592,9 @@
                 <li><a href="chapters/chapter24.html">Ch 24: Respiratory</a></li>
                 <li><a href="chapters/chapter25.html">Ch 25: Digestive</a></li>
                 <li><a href="chapters/chapter26.html">Ch 26: Urinary/Repro</a></li>
+                <li><a href="labs/lab-exam-2-review.html" class="nav-lab">Lab Exam 2</a></li>
+                <li><a href="todo.html" class="nav-todo">Site Status</a></li>
+                <li><a href="practice.html" class="nav-highlight active">Practice Test</a></li>
             </ul>
         </div>
     </nav>
