--- a/labs/lab-exam-2-review.html
+++ b/labs/lab-exam-2-review.html
@@ -20,27 +20,32 @@
         }
 
         .category-btn {
-            padding: 0.75rem 1.5rem;
-            border: 2px solid var(--border);
-            background: var(--surface);
-            color: var(--text-secondary);
-            border-radius: var(--radius-sm);
+            padding: 1.25rem 2.5rem;
+            border: 3px solid var(--border);
+            background: linear-gradient(135deg, var(--surface) 0%, rgba(139, 92, 246, 0.1) 100%);
+            color: var(--text-primary);
+            border-radius: 12px;
             cursor: pointer;
-            font-weight: 600;
-            transition: var(--transition);
+            font-weight: 700;
+            font-size: 1.1rem;
+            transition: all 0.3s ease;
+            text-transform: uppercase;
+            letter-spacing: 0.5px;
         }
 
         .category-btn:hover {
             border-color: var(--primary);
             color: var(--primary);
-            box-shadow: 0 0 15px rgba(6, 182, 212, 0.2);
+            box-shadow: 0 0 25px rgba(6, 182, 212, 0.3);
+            transform: translateY(-2px);
         }
 
         .category-btn.active {
             background: linear-gradient(135deg, #06b6d4 0%, #8b5cf6 100%);
             border-color: transparent;
             color: white;
-            box-shadow: 0 0 20px rgba(6, 182, 212, 0.4);
+            box-shadow: 0 0 30px rgba(6, 182, 212, 0.5);
+            transform: scale(1.02);
         }
 
         .lab-tabs-wrapper {
@@ -603,8 +608,8 @@
             }
 
             .category-btn {
-                padding: 0.6rem 1.25rem;
-                font-size: 0.9rem;
+                padding: 1rem 1.5rem;
+                font-size: 1rem;
             }
 
             .test-header {
