--- a/labs/lab-exam-2-review.html
+++ b/labs/lab-exam-2-review.html
@@ -1152,7 +1152,7 @@
                 </div>
 
                 <div class="test-section">
-                    <h4>Image Key (Left to Right)</h4>
+                    <h4>Image Key for First Image (Left to Right)</h4>
                     <ol>
                         <li><strong>K/K/-/-</strong> — No fermentation, no H₂S, no gas</li>
                         <li><strong>K/A/+/-</strong> — Glucose only, H₂S positive, no gas</li>
@@ -1169,6 +1169,7 @@
                     <h5>Test Results</h5>
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/KIA test.png" alt="Kligler Iron Agar Results"></div>
+                        <div class="gallery-item"><img src="../images/kiatest2.png" alt="KIA Test Results 2"></div>
                     </div>
                 </div>
             </div>
