--- a/labs/lab-exam-2-review.html
+++ b/labs/lab-exam-2-review.html
@@ -1862,6 +1862,7 @@
                     <h5>Test Results</h5>
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/nitrate reduction.png" alt="Nitrate Reduction Results"></div>
+                        <div class="gallery-item"><img src="../images/nitratereduct.jpg" alt="Nitrate Reduction Test"></div>
                     </div>
                 </div>
             </div>
