--- a/labs/lab-exam-2-review.html
+++ b/labs/lab-exam-2-review.html
@@ -885,6 +885,7 @@
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/MR test.png" alt="Methyl Red Test Results"></div>
                         <div class="gallery-item"><img src="../images/VP test.png" alt="VP Test Results"></div>
+                        <div class="gallery-item"><img src="../images/mrvpnew.jpg" alt="MR-VP Test"></div>
                     </div>
                 </div>
             </div>
@@ -1037,6 +1038,7 @@
                     <h5>Test Results</h5>
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/indole.png" alt="Indole Test Results"></div>
+                        <div class="gallery-item"><img src="../images/new/indole_new.jpg" alt="Indole Test"></div>
                     </div>
                 </div>
             </div>
@@ -1170,6 +1172,7 @@
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/KIA test.png" alt="Kligler Iron Agar Results"></div>
                         <div class="gallery-item"><img src="../images/kiatest2.png" alt="KIA Test Results 2"></div>
+                        <div class="gallery-item"><img src="../images/new/kia_new.jpg" alt="KIA Test"></div>
                     </div>
                 </div>
             </div>
@@ -1293,6 +1296,7 @@
                     <h5>Test Results</h5>
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/urea test.png" alt="Urease Test Results"></div>
+                        <div class="gallery-item"><img src="../images/new/urea_new.jpg" alt="Urease Test"></div>
                     </div>
                 </div>
             </div>
@@ -1372,6 +1376,7 @@
                     <h5>Test Results</h5>
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/EMB test.png" alt="EMB Agar Results"></div>
+                        <div class="gallery-item"><img src="../images/new/emb_new.jpg" alt="EMB Agar"></div>
                     </div>
                 </div>
             </div>
@@ -1567,6 +1572,7 @@
                     <h5>Test Results</h5>
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/starch hydrolysis.png" alt="Starch Hydrolysis Results"></div>
+                        <div class="gallery-item"><img src="../images/new/starch_new.jpg" alt="Starch Hydrolysis Results 2"></div>
                     </div>
                 </div>
             </div>
@@ -1623,6 +1629,7 @@
                     <h5>Test Results</h5>
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/spirit blue.png" alt="Spirit Blue Agar Results"></div>
+                        <div class="gallery-item"><img src="../images/new/spirit blue_new.jpg" alt="Spirit Blue Agar Results 2"></div>
                     </div>
                 </div>
             </div>
@@ -1952,6 +1959,7 @@
                     <h5>Test Results</h5>
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/motility.png" alt="Motility Test Results"></div>
+                        <div class="gallery-item"><img src="../images/new/motility_new.jpg" alt="Motility Test Results 2"></div>
                     </div>
                 </div>
             </div>
@@ -2032,6 +2040,7 @@
                     <div class="gallery-placeholder">
                         <div class="gallery-item"><img src="../images/phenylalanine1.jpg" alt="Phenylalanine Deaminase Test Results 1"></div>
                         <div class="gallery-item"><img src="../images/phenylalanine2.jpg" alt="Phenylalanine Deaminase Test Results 2"></div>
+                        <div class="gallery-item"><img src="../images/new/phenylalanine_new.jpg" alt="Phenylalanine Deaminase Test Results 3"></div>
                     </div>
                 </div>
             </div>
