quick study update

--- a/labs/lab-exam-2-review.html
+++ b/labs/lab-exam-2-review.html
@@ -940,9 +940,9 @@
                     <h5>Quick Study</h5>
                     <ul>
                         <li><strong>MR+ = RED</strong> (acid), <strong>VP+ = RED at top</strong> (acetoin)</li>
-                        <li>Both use <strong>MRVP broth</strong> - same medium, different reagents</li>
+                        <li>MR reagent: <strong>Methyl red</strong></li>
+                        <li>VP reagents: <strong>Barritt's A</strong> (alpha-naphthol), <strong>B</strong> (KOH)</li>
                         <li>MR and VP are usually <strong>opposite</strong> (mutually exclusive)</li>
-                        <li>VP: Add VPA first, then VPB</li>
                     </ul>
                 </div>
 
@@ -2058,10 +2058,9 @@
                     <h5>Quick Study</h5>
                     <ul>
                         <li><strong>RED after reagents = Positive</strong> (nitrite present)</li>
-                        <li>No red? Add <strong>zinc</strong>:</li>
-                        <li>Red after zinc = <strong>Negative</strong> (NO₃ still there)</li>
-                        <li>No red after zinc = <strong>Positive</strong> (complete denitrification to N₂)</li>
-                        <li>Pathway: NO₃ → NO₂ → NO → N₂O → N₂</li>
+                        <li>Reagents: <strong>Nitrate A</strong> (sulfanilic acid), <strong>B</strong> (dimethyl-alpha-naphthylamine)</li>
+                        <li>No red? Add <strong>zinc powder</strong>:</li>
+                        <li>Red after zinc = <strong>Negative</strong>; No red after zinc = <strong>Positive</strong></li>
                     </ul>
                 </div>
 
@@ -2337,7 +2336,8 @@
                     <h5>Quick Study</h5>
                     <ul>
                         <li><strong>Clear halo</strong> around purple cells = Capsule</li>
-                        <li>Anthony method: <strong>NO heat-fix</strong>, use copper sulfate</li>
+                        <li>Stain: <strong>Crystal violet</strong>; Wash: <strong>Copper sulfate</strong></li>
+                        <li>Anthony method: <strong>NO heat-fix</strong></li>
                         <li>Capsule = <strong>virulence factor</strong> (prevents phagocytosis)</li>
                     </ul>
                 </div>
@@ -2435,6 +2435,7 @@
                     <h5>Quick Study</h5>
                     <ul>
                         <li><strong>GREEN = Endospore</strong> | <strong>RED = Vegetative cell</strong></li>
+                        <li>Stain: <strong>Malachite green</strong>; Counterstain: <strong>Safranin</strong></li>
                         <li><strong>Heat required</strong> to drive malachite green into spores</li>
                         <li><strong>Autoclaving</strong> kills spores; boiling does NOT</li>
                     </ul>
@@ -2523,8 +2524,9 @@
                     <ul>
                         <li><strong>RED = Acid-fast positive</strong></li>
                         <li><strong>BLUE = Non-acid-fast</strong></li>
+                        <li>Stain: <strong>Carbol fuchsin</strong>; Counterstain: <strong>Methylene blue</strong></li>
+                        <li>Decolorizer: <strong>Acid-alcohol</strong></li>
                         <li><strong>Mycolic acid</strong> in cell wall = acid-fast property</li>
-                        <li>Kinyoun = cold method; Ziehl-Neelsen = heat method</li>
                     </ul>
                 </div>
 
