--- a/labs/ex13.html
+++ b/labs/ex13.html
@@ -151,7 +151,7 @@
                 <li><em>S. mutans</em> capsule causes dental plaque/caries</li>
                 <li>Anthony method: <strong>NO heat-fix</strong>, use <strong>copper sulfate</strong> wash</li>
                 <li>Capsule appears as <strong>clear halo</strong> around dark purple cells</li>
-                <li>Organism used: <em>Klebsiella pneumoniae</em></li>
+                <li>Example organism: <em>Klebsiella pneumoniae</em> (has prominent capsule)</li>
             </ul>
         </div>
     </main>
