--- a/labs/lab-exam-2-review.html
+++ b/labs/lab-exam-2-review.html
@@ -2335,9 +2335,10 @@
                 <div class="quick-study-box">
                     <h5>Quick Study</h5>
                     <ul>
-                        <li><strong>Clear halo</strong> around purple cells = Capsule</li>
-                        <li>Stain: <strong>Crystal violet</strong>; Wash: <strong>Copper sulfate</strong></li>
-                        <li>Anthony method: <strong>NO heat-fix</strong></li>
+                        <li><strong>Clear halo</strong> around cells = Capsule</li>
+                        <li><strong>Anthony:</strong> Crystal violet + <strong>Copper sulfate</strong> wash</li>
+                        <li><strong>Congo Red:</strong> Congo red + <strong>Maneval's</strong> counterstain</li>
+                        <li><strong>NO heat-fix</strong> (capsule is water-soluble)</li>
                         <li>Capsule = <strong>virulence factor</strong> (prevents phagocytosis)</li>
                     </ul>
                 </div>
