--- a/labs/ex13.html
+++ b/labs/ex13.html
@@ -146,11 +146,11 @@
         <div class="highlight-box mt-4">
             <h4>Test-Taking Points</h4>
             <ul>
-                <li>Capsules = major <strong>virulence factor</strong></li>
-                <li><em>S. pneumoniae</em> capsule prevents phagocytosis</li>
-                <li><em>S. mutans</em> capsule causes dental plaque/caries</li>
-                <li>Anthony method: <strong>NO heat-fix</strong>, use <strong>copper sulfate</strong> wash</li>
-                <li>Capsule appears as <strong>clear halo</strong> around dark purple cells</li>
+                <li>Capsules = major <strong>virulence factor</strong> (prevents phagocytosis)</li>
+                <li><strong>Anthony method:</strong> Crystal violet stain + <strong>copper sulfate</strong> wash</li>
+                <li><strong>Congo Red method:</strong> Congo red + <strong>Maneval's</strong> counterstain</li>
+                <li><strong>NO heat-fix</strong> for either method (capsule is water-soluble)</li>
+                <li>Capsule appears as <strong>clear halo</strong> around cells</li>
                 <li>Example organism: <em>Klebsiella pneumoniae</em> (has prominent capsule)</li>
             </ul>
         </div>
