--- a/labs/ex13.html
+++ b/labs/ex13.html
@@ -143,14 +143,54 @@
             </table>
         </div>
 
+        <div class="concept-card">
+            <h3>Congo Red / Maneval's Method</h3>
+            <div class="highlight-box">
+                <strong>DO NOT HEAT-FIX!</strong> Same as Anthony - heat destroys the capsule.
+            </div>
+            <ul class="mt-2">
+                <li><strong>Air-dry only</strong> - No heat fixation</li>
+                <li><strong>Primary stain:</strong> Congo red (acidic dye) - stains background</li>
+                <li><strong>Counterstain:</strong> Maneval's stain (acidic, contains acid fuchsin + ferric chloride)</li>
+                <li>Maneval's stains the <strong>cell body</strong> but NOT the capsule</li>
+            </ul>
+        </div>
+
+        <div class="concept-card">
+            <h3>Congo Red Method - Expected Results</h3>
+            <table class="comparison-table">
+                <thead>
+                    <tr>
+                        <th>Structure</th>
+                        <th>Color</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td><strong>Background</strong></td>
+                        <td>Dark blue/black (Congo red + Maneval's)</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Cell body</strong></td>
+                        <td>Pink/red (Maneval's stain)</td>
+                    </tr>
+                    <tr>
+                        <td><strong>Capsule</strong></td>
+                        <td>Clear/unstained halo</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
         <div class="highlight-box mt-4">
             <h4>Test-Taking Points</h4>
             <ul>
                 <li>Capsules = major <strong>virulence factor</strong> (prevents phagocytosis)</li>
                 <li><strong>Anthony method:</strong> Crystal violet stain + <strong>copper sulfate</strong> wash</li>
-                <li><strong>Congo Red method:</strong> Congo red + <strong>Maneval's</strong> counterstain</li>
+                <li><strong>Congo Red method:</strong> Congo red (background) + <strong>Maneval's</strong> (cells)</li>
                 <li><strong>NO heat-fix</strong> for either method (capsule is water-soluble)</li>
-                <li>Capsule appears as <strong>clear halo</strong> around cells</li>
+                <li>Capsule appears as <strong>clear halo</strong> around cells in both methods</li>
+                <li>Both methods use <strong>negative staining</strong> principle - capsule excludes dye</li>
                 <li>Example organism: <em>Klebsiella pneumoniae</em> (has prominent capsule)</li>
             </ul>
         </div>
