--- a/labs/lab-exam-2-review.html
+++ b/labs/lab-exam-2-review.html
@@ -2320,14 +2320,40 @@
                     </div>
                 </div>
 
+                <div class="info-card">
+                    <h4>Congo Red / Maneval's Method</h4>
+                    <ul>
+                        <li><strong>Air-dry only</strong> - NO heat-fix (same as Anthony)</li>
+                        <li><strong>Primary stain:</strong> Congo red (acidic dye) - stains background</li>
+                        <li><strong>Counterstain:</strong> Maneval's stain (contains acid fuchsin + ferric chloride)</li>
+                        <li>Maneval's stains the <strong>cell body</strong> but NOT the capsule</li>
+                    </ul>
+                </div>
+
+                <div class="result-box">
+                    <div class="result-item result-positive">
+                        <h5>Background (Congo Red)</h5>
+                        <p>Dark blue/black</p>
+                    </div>
+                    <div class="result-item result-positive">
+                        <h5>Cell Body (Congo Red)</h5>
+                        <p>Pink/red (Maneval's)</p>
+                    </div>
+                    <div class="result-item result-negative">
+                        <h5>Capsule (Congo Red)</h5>
+                        <p>Clear/unstained halo</p>
+                    </div>
+                </div>
+
                 <div class="key-point">
                     <strong>Test-Taking Points:</strong>
                     <ul>
                         <li>Capsules = major <strong>virulence factor</strong></li>
                         <li><em>S. pneumoniae</em> capsule prevents phagocytosis</li>
                         <li><em>S. mutans</em> capsule causes dental plaque/caries</li>
-                        <li>Anthony method: <strong>NO heat-fix</strong>, use <strong>copper sulfate</strong> wash</li>
-                        <li>Capsule appears as <strong>clear halo</strong> around dark purple cells</li>
+                        <li><strong>NO heat-fix</strong> for either method (capsule is water-soluble)</li>
+                        <li>Capsule appears as <strong>clear halo</strong> around cells in both methods</li>
+                        <li>Both methods use <strong>negative staining</strong> principle - capsule excludes dye</li>
                         <li>Example organism: <em>Klebsiella pneumoniae</em> (has prominent capsule)</li>
                     </ul>
                 </div>
@@ -2336,8 +2362,8 @@
                     <h5>Quick Study</h5>
                     <ul>
                         <li><strong>Clear halo</strong> around cells = Capsule</li>
-                        <li><strong>Anthony:</strong> Crystal violet + <strong>Copper sulfate</strong> wash</li>
-                        <li><strong>Congo Red:</strong> Congo red + <strong>Maneval's</strong> counterstain</li>
+                        <li><strong>Anthony:</strong> Crystal violet + <strong>Copper sulfate</strong> wash → purple background, clear capsule</li>
+                        <li><strong>Congo Red:</strong> Congo red (background) + <strong>Maneval's</strong> (cells) → dark background, pink cells, clear capsule</li>
                         <li><strong>NO heat-fix</strong> (capsule is water-soluble)</li>
                         <li>Capsule = <strong>virulence factor</strong> (prevents phagocytosis)</li>
                     </ul>
